# AI-Robotics-Group-12-Project

./: .gitignore  CMakeLists.txt  DOCUMENTATION.md  README.md  TestWorld.sdf  package.xml  run_with_camera_viewer.sh  test_world.launch.py  view_camera.py
launch/: obstacle_course.launch.py
models/cyan_target/: model.config  model.sdf
models/turtlebot/: fov_cone.dae  model.sdf
my_world/: package.xml
my_world/src/: cylinder_auto_mover.cpp
my_world/worlds/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/: vision_target_follower_node.cpp
worlds/: obstacle_course.world
