<?xml version="1.0"?>
<package format="3">
  <name>my_world</name>
  <version>0.0.0</version>
  <description>Custom Gazebo world package</description>

  <maintainer email="your@email.com">madoks</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

